[gd_scene load_steps=16 format=2]

[ext_resource path="res://materials/wood_materia.tres" type="Material" id=1]
[ext_resource path="res://scenes/DockPoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ShopArea.gd" type="Script" id=3]
[ext_resource path="res://objects/Cannon.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/MissionGiver.gd" type="Script" id=5]
[ext_resource path="res://src/3DIcon.gd" type="Script" id=6]
[ext_resource path="res://objects/Gate3DIcon.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/BarelMesh.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/characters/OldClassy_Male.tscn" type="PackedScene" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 8.88496 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 6.78218 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 14.4196, 2.94282, 11.0909 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 4.17956, 5.31587, 9.58113 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 4.17956, 5.31587, 9.58113 )

[sub_resource type="BoxShape" id=6]

[node name="LPG" type="StaticBody"]

[node name="Quai" type="CSGCombiner" parent="."]

[node name="CSGBox" type="CSGBox" parent="Quai"]
height = 0.177596
depth = 15.907
material = ExtResource( 1 )

[node name="CSGBox3" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox4" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox5" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox6" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox7" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox8" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox9" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox10" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox11" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 0 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox12" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 0 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox13" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox14" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox15" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox16" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox17" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox18" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox19" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox20" type="CSGBox" parent="Quai"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="Quai2" type="CSGCombiner" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.01642, 0, -8.94013 )

[node name="CSGBox" type="CSGBox" parent="Quai2"]
height = 0.177596
depth = 15.907
material = ExtResource( 1 )

[node name="CSGBox3" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox4" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox5" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox6" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox7" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox8" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox9" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, -2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox10" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, -2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox11" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 0 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox12" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 0 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox13" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox14" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 2 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox15" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox16" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 4 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox17" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox18" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 6 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox19" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.899226, -1.40017, 8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox20" type="CSGBox" parent="Quai2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915364, -1.40017, 8 )
width = 0.238306
height = 3.64734
depth = 0.235515
material = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.313, -3.71157, 0 )
width = 22.0081
height = 7.57978
depth = 28.3299

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.825564, -1.21711 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8.00603, -0.825564, -8.90057 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 26.2914, -3.05117, -0.102839 )
shape = SubResource( 3 )

[node name="DockPoint" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.916585, 0.396705, 8.01101 )

[node name="DockPoint3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.916585, 0.396705, 0.0102355 )

[node name="DockPoint5" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.916585, 0.396705, -8.07057 )

[node name="CSGBox3" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.2145, 8.11103, 0 )
width = 12.4344
height = 0.677981
depth = 22.136

[node name="CSGBox2" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 0.886204, 0.463296, 0, -0.463296, 0.886204, 26.8695, 2.6844, 1.19464 )
width = 1.0683
height = 13.8672
depth = 2.43738

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 30.9517, 2.35752, -8.09897 )
radius = 1.63093
height = 6.39629

[node name="CSGCylinder2" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 23.9045, 2.35752, -8.09897 )
radius = 1.63093
height = 6.39629

[node name="CSGCylinder3" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 30.9517, 2.35752, 7.77169 )
radius = 1.63093
height = 6.39629

[node name="CSGCylinder4" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 23.9045, 2.35752, 7.77169 )
radius = 1.63093
height = 6.39629

[node name="ShopArea" type="Area" parent="."]
script = ExtResource( 3 )
producing = [ "Fuel", "CBall" ]

[node name="CollisionShape" type="CollisionShape" parent="ShopArea"]
shape = SubResource( 4 )

[node name="MissionGiver" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="PosterStand" type="CSGCombiner" parent="MissionGiver"]
visible = false
material_override = ExtResource( 1 )

[node name="CSGBox" type="CSGBox" parent="MissionGiver/PosterStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.53858, 2.29399, 0 )
width = 0.582133
depth = 6.92777

[node name="CSGBox4" type="CSGBox" parent="MissionGiver/PosterStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.53858, 0.97352, 2.84377 )
width = 0.221789
depth = 0.542228

[node name="CSGBox5" type="CSGBox" parent="MissionGiver/PosterStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.53858, 0.97352, -2.78373 )
width = 0.221789
depth = 0.542228

[node name="CSGBox2" type="CSGBox" parent="MissionGiver/PosterStand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.18263, 2.29399, 0 )
operation = 2
width = 0.582133
height = 1.6607
depth = 6.75208

[node name="OldClassy_Male" parent="MissionGiver" instance=ExtResource( 9 )]
transform = Transform( 0.424117, 0, -0.417303, 0, 0.594993, 0, 0.417303, 0, 0.424117, 0, 0, -8.45515 )

[node name="Area" type="Area" parent="MissionGiver"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="MissionGiver/Area"]
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="MissionGiver"]

[node name="SpotLight" type="SpotLight" parent="MissionGiver"]
transform = Transform( 0.707107, 2.10734e-08, -0.707107, 0.707107, -2.10734e-08, 0.707107, 0, -1, -2.98023e-08, -2.03169, 3.60701, -2.39014 )
visible = false
spot_range = 6.99292

[node name="SpotLight2" type="SpotLight" parent="MissionGiver"]
transform = Transform( 0.707107, 2.10734e-08, -0.707107, 0.707107, -2.10734e-08, 0.707107, 0, -1, -2.98023e-08, -2.03169, 3.60701, 1.85273 )
visible = false
spot_range = 6.99292

[node name="UnusedIcons" type="Node" parent="MissionGiver"]

[node name="BarelIcon" type="Area" parent="MissionGiver/UnusedIcons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.40384, 2.75682, -3.39038 )
visible = false
script = ExtResource( 6 )

[node name="Mesh" parent="MissionGiver/UnusedIcons/BarelIcon" instance=ExtResource( 8 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="MissionGiver/UnusedIcons/BarelIcon"]
shape = SubResource( 6 )

[node name="SpotLight" type="SpotLight" parent="MissionGiver/UnusedIcons/BarelIcon"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.88789, 0 )
visible = false
spot_range = 12.7225
spot_angle = 11.7228

[node name="CanonIcon" type="Area" parent="MissionGiver/UnusedIcons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.40384, 2.75682, -1.05142 )
visible = false
script = ExtResource( 6 )

[node name="Mesh" parent="MissionGiver/UnusedIcons/CanonIcon" instance=ExtResource( 4 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="MissionGiver/UnusedIcons/CanonIcon"]
shape = SubResource( 6 )

[node name="SpotLight" type="SpotLight" parent="MissionGiver/UnusedIcons/CanonIcon"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.88789, 0 )
visible = false
spot_range = 12.7225
spot_angle = 11.7228

[node name="RaceIcon" type="Area" parent="MissionGiver/UnusedIcons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.40384, 2.75682, 1.23803 )
visible = false
script = ExtResource( 6 )

[node name="Mesh" parent="MissionGiver/UnusedIcons/RaceIcon" instance=ExtResource( 7 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, -1.21624, 0 )

[node name="CollisionShape" type="CollisionShape" parent="MissionGiver/UnusedIcons/RaceIcon"]
shape = SubResource( 6 )

[node name="SpotLight" type="SpotLight" parent="MissionGiver/UnusedIcons/RaceIcon"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.88789, 0 )
visible = false
spot_range = 12.7225
spot_angle = 11.7228

[connection signal="body_entered" from="ShopArea" to="ShopArea" method="_on_ShopArea_body_entered"]
[connection signal="body_exited" from="ShopArea" to="ShopArea" method="_on_ShopArea_body_exited"]
[connection signal="body_entered" from="MissionGiver/Area" to="MissionGiver" method="_on_Area_body_entered"]
[connection signal="body_exited" from="MissionGiver/Area" to="MissionGiver" method="_on_Area_body_exited"]
